syntax = "proto3";

package envoy.config.ratelimit.v3alpha;

option java_outer_classname = "RlsProto";
option java_multiple_files = true;
option java_package = "io.envoyproxy.envoy.config.ratelimit.v3alpha";

import "envoy/api/v3alpha/core/grpc_service.proto";

import "validate/validate.proto";

// [#protodoc-title: Rate limit service]

// Rate limit :ref:`configuration overview <config_rate_limit_service>`.
message RateLimitServiceConfig {
  reserved 1, 3;

  // Specifies the gRPC service that hosts the rate limit service. The client
  // will connect to this cluster when it needs to make rate limit service
  // requests.
  api.v3alpha.core.GrpcService grpc_service = 2 [(validate.rules).message = {required: true}];
}
